--- a/packages/rettangoli-sites/package.json
+++ b/packages/rettangoli-sites/package.json
@@ -20,6 +20,7 @@
     "jempl": "^0.3.1-rc1",
     "js-yaml": "^4.1.0",
     "markdown-it": "^14.1.0",
+    "shiki": "^3.13.0",
     "ws": "^8.18.0",
     "yahtml": "0.0.4"
   },
