docs(vt): use local rtgl scripts for sites integration

--- a/apps/rettangoli.dev/data/vtDocs.yaml
+++ b/apps/rettangoli.dev/data/vtDocs.yaml
@@ -29,3 +29,6 @@ items:
       - id: vt-selectors-and-artifacts
         title: "Selectors & Artifacts"
         href: "/vt/docs/reference/selectors-and-artifacts"
+      - id: vt-sites-integration
+        title: "Sites Integration"
+        href: "/vt/docs/reference/sites-integration"
