--- a/packages/rettangoli-sites/templates/default/sites.config.yaml
+++ b/packages/rettangoli-sites/templates/default/sites.config.yaml
@@ -13,4 +13,8 @@ markdownit:
   shiki:
     enabled: true
     theme: slack-dark
-  headingAnchors: true
+  headingAnchors:
+    enabled: true
+    slugMode: unicode
+    wrap: true
+    fallback: section
