--- a/packages/rettangoli-sites/templates/default/templates/post.yaml
+++ b/packages/rettangoli-sites/templates/default/templates/post.yaml
@@ -4,8 +4,10 @@
         - meta name="viewport" content="width=device-width,initial-scale=1":
         - title: ${title} - ${site.name}
         - link rel="stylesheet" href="/css/theme.css":
-        - script src="https://cdn.jsdelivr.net/npm/construct-style-sheets-polyfill@3.1.0/dist/adoptedStyleSheets.min.js":
-        - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@0.1.31/dist/rettangoli-iife-ui.min.js":
+        - $if site.assets.loadConstructStyleSheetsPolyfill:
+            - script src="https://cdn.jsdelivr.net/npm/construct-style-sheets-polyfill@3.1.0/dist/adoptedStyleSheets.min.js":
+        - $if site.assets.loadUiFromCdn:
+            - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@0.1.31/dist/rettangoli-iife-ui.min.js":
     - body.dark:
         - rtgl-view h="64":
         - rtgl-view w="f" ah="c":
