--- a/packages/rettangoli-ui/src/components/navbar/navbar.view.yaml
+++ b/packages/rettangoli-ui/src/components/navbar/navbar.view.yaml
@@ -11,17 +11,17 @@ template:
   - rtgl-view bgc=bg d=h h=48 av=c w=f ${containerAttrString}:
       - $if start.href:
           - a href=${start.href}:
-              - rtgl-view d=h av=c g=lg g=md:
+              - rtgl-view d=h av=c g=md:
                   - - rtgl-text s=lg: ${start.label}
                     - $if start.image && start.image.src:
                         - rtgl-image w=${start.image.width} h=${start.image.height} src=${start.image.src} alt=${start.image.alt}: null
         $elif start.path:
-          - rtgl-view#start d=h av=c g=lg g=md cur=pointer:
+          - rtgl-view#start d=h av=c g=md cur=pointer:
               - - rtgl-text s=lg: ${start.label}
                 - $if start.image && start.image.src:
                     - rtgl-image w=${start.image.width} h=${start.image.height} src=${start.image.src} alt=${start.image.alt}: null
         $else:
-          - rtgl-view d=h av=c g=lg g=md:
+          - rtgl-view d=h av=c g=md:
               - - rtgl-text s=lg: ${start.label}
                 - $if start.image && start.image.src:
                     - rtgl-image w=${start.image.width} h=${start.image.height} src=${start.image.src} alt=${start.image.alt}: null
