--- a/packages/rettangoli-cli/package.json
+++ b/packages/rettangoli-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rtgl",
-  "version": "1.0.0-rc4",
+  "version": "1.0.0-rc6",
   "description": "CLI tool for Rettangoli - A frontend framework and development toolkit",
   "type": "module",
   "bin": {
@@ -47,9 +47,9 @@
   "dependencies": {
     "commander": "^14.0.0",
     "js-yaml": "^4.1.0",
-    "@rettangoli/fe": "workspace:1.0.0-rc2",
+    "@rettangoli/fe": "workspace:1.0.0-rc3",
     "@rettangoli/sites": "workspace:0.2.7",
-    "@rettangoli/vt": "workspace:1.0.0-rc2",
-    "@rettangoli/ui": "workspace:0.1.32"
+    "@rettangoli/vt": "workspace:1.0.0-rc3",
+    "@rettangoli/ui": "workspace:1.0.0-rc1"
   }
 }
