--- a/apps/rettangoli.dev/pages/index.yaml
+++ b/apps/rettangoli.dev/pages/index.yaml
@@ -7,3 +7,20 @@ title: Rettangoli
       title: ${site.hero.title}
       subtitle: ${site.hero.subtitle}
       cta: ${site.hero.cta}
+    - rtgl-view h=24:
+    - rtgl-view w="f" d="v" g="lg":
+        - rtgl-text s=h3 ta=c: "Libraries"
+        - rtgl-text ta=c c="mu-fg": "Use the docs below to get started with each package."
+        - rtgl-view d="h" sm-d="v" g="lg" w="f":
+            - rtgl-view w="1fg" d="v" g="md" bw="xs" br="md" bgc="mu" p="lg":
+                - rtgl-text s=h4: "rettangoli-ui"
+                - rtgl-text c="mu-fg": "Web components and primitives for app UIs."
+                - rtgl-button href="/ui/docs/introduction/introduction/": "Read UI docs"
+            - rtgl-view w="1fg" d="v" g="md" bw="xs" br="md" bgc="mu" p="lg":
+                - rtgl-text s=h4: "rettangoli-sites"
+                - rtgl-text c="mu-fg": "Static site generator for docs and content sites."
+                - rtgl-button href="/sites/docs/introduction/": "Read Sites docs"
+            - rtgl-view w="1fg" d="v" g="md" bw="xs" br="md" bgc="mu" p="lg":
+                - rtgl-text s=h4: "rettangoli-vt"
+                - rtgl-text c="mu-fg": "Visual testing workflow for snapshots and reports."
+                - rtgl-button href="/vt/docs/introduction/quickstart/": "Read VT docs"
