--- a/apps/rettangoli.dev/templates/fe-documentation.yaml
+++ b/apps/rettangoli.dev/templates/fe-documentation.yaml
@@ -5,7 +5,7 @@
           seo: ${seo}
         - link rel="stylesheet" href="/public/theme.css":
         - script src="https://cdn.jsdelivr.net/npm/construct-style-sheets-polyfill@3.1.0/dist/adoptedStyleSheets.min.js":
-        - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc2/dist/rettangoli-iife-ui.min.js":
+        - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc3/dist/rettangoli-iife-ui.min.js":
         - script src="/public/rtgl-icons.js":
 
     - body.dark:
@@ -15,7 +15,7 @@
             - rtgl-view md-hide xl-show hide w=272:
             - rtgl-view w="1fg" ah=c:
                 - rtgl-view pv="lg" lg-w="100vw" w="720" ph="xl" sv id="content-container":
-                    - rtgl-text s="h1" mb="md": ${title}
+                    - rtgl-text s="h1" mb="lg": ${title}
                     - "${content}"
                     - rtgl-view h=200:
             - 'rtgl-view xl-hide style="position: fixed; right: 0"':
