--- a/apps/rettangoli.dev/templates/base.yaml
+++ b/apps/rettangoli.dev/templates/base.yaml
@@ -4,9 +4,10 @@
           page: ${page}
           seo: ${seo}
           title: ${title}
-        - link rel="stylesheet" href="/public/theme.css":
+        - link rel="stylesheet" href="/public/base.css":
+        - link rel="stylesheet" href="/public/theme-rtgl-slate.css":
         - script src="https://cdn.jsdelivr.net/npm/construct-style-sheets-polyfill@3.1.0/dist/adoptedStyleSheets.min.js":
-        - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc3/dist/rettangoli-iife-ui.min.js":
+        - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc6/dist/rettangoli-iife-ui.min.js":
         - script src="/public/rtgl-icons.js":
 
     - body.dark:
