vt: remove legacy step strings and add derived section keys

--- a/packages/rettangoli-vt/spec/options-validation.spec.yaml
+++ b/packages/rettangoli-vt/spec/options-validation.spec.yaml
@@ -122,7 +122,7 @@ out:
     folders:
       - components/forms
     groups:
-      - components_basic
+      - components-basic
     items:
       - pages/home
   screenshotWaitTime: 0
