--- a/packages/rettangoli-vt/spec/report-options.spec.yaml
+++ b/packages/rettangoli-vt/spec/report-options.spec.yaml
@@ -83,6 +83,6 @@ out:
     folders:
       - components/forms
     groups:
-      - components_basic
+      - components-basic
     items:
       - pages/home
