--- a/apps/rettangoli.dev/templates/fe-documentation.yaml
+++ b/apps/rettangoli.dev/templates/fe-documentation.yaml
@@ -10,14 +10,24 @@
         - script src="/public/rtgl-icons.js":
 
     - body.dark:
+        - $partial: mobile-nav1
+          headerLabel: ${feDocs.header.label}
+          headerHref: ${feDocs.header.href}
+          header: ${feDocs.header}
+          items: ${feDocs.items}
+          sidebarId: ${sidebarId}
+
         - rtgl-view bgc="bg" w="f" d=h:
             - 'rtgl-view md-hide pos=fix h=100vh bgc=bg style="left: 0"':
                 - rtgl-sidebar selected-item-id=${sidebarId} header="${encodeURIComponent(jsonStringify(feDocs.header))}" items="${encodeURIComponent(jsonStringify(feDocs.items))}":
             - rtgl-view md-hide xl-show hide w=272:
             - rtgl-view w="1fg" ah=c:
                 - rtgl-view pv="lg" lg-w="100vw" w="720" ph="xl" sv id="content-container":
+                    - rtgl-view hide md-show h=56:
                     - rtgl-text s="h1" mb="lg": ${title}
                     - "${content}"
                     - rtgl-view h=200:
             - 'rtgl-view xl-hide style="position: fixed; right: 0"':
                 - rtgl-page-outline id="page-outline" target-id="content-container" scroll-container-id="window" offset-top="80":
+
+        - script src="/public/mobile-nav.js":
