--- a/apps/rettangoli.dev/templates/fe-documentation.yaml
+++ b/apps/rettangoli.dev/templates/fe-documentation.yaml
@@ -3,14 +3,20 @@
         - $partial: seo1
           page: ${page}
           seo: ${seo}
-        - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc6/dist/themes/base.css":
-        - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc6/dist/themes/theme-rtgl-slate.css":
+        - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/themes/base.css":
+        - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/themes/theme-rtgl-slate.css":
+        - link rel="stylesheet" href="/public/base.css":
         - script src="https://cdn.jsdelivr.net/npm/construct-style-sheets-polyfill@3.1.0/dist/adoptedStyleSheets.min.js":
-        - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc6/dist/rettangoli-iife-ui.min.js":
+        - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/rettangoli-iife-ui.min.js":
         - script src="/public/rtgl-icons.js":
+        - script src="/public/docs-mobile.js":
 
     - body.dark:
         - rtgl-view bgc="bg" w="f" d=h:
+            - $partial: docs-mobile-shell
+              sidebarId: ${sidebarId}
+              header: ${feDocs.header}
+              items: ${feDocs.items}
             - 'rtgl-view md-hide pos=fix h=100vh bgc=bg style="left: 0"':
                 - rtgl-sidebar selected-item-id=${sidebarId} header="${encodeURIComponent(jsonStringify(feDocs.header))}" items="${encodeURIComponent(jsonStringify(feDocs.items))}":
             - rtgl-view md-hide xl-show hide w=272:
