feat(ui): rewrite form component to v1 interface spec
Rewrite rtgl-form to match the v1 form schema interface:

- New event model: form-input, form-change, form-field-event, form-action
- Validation engine with required, minLength, maxLength, pattern rules
- Reactive validation mode after first failure
- Methods: getValues, setValues, validate, reset
- New rtgl-checkbox primitive
- Section grouping, action layouts (split/vertical/stretch)
- Field-level and form-level disabled support
- 45 puty unit tests, 28 VT visual tests

--- a/packages/rettangoli-ui/package.json
+++ b/packages/rettangoli-ui/package.json
@@ -27,6 +27,8 @@
   },
   "license": "MIT",
   "scripts": {
+    "test": "vitest run --reporter=verbose",
+    "test:puty": "vitest run puty.spec.js --reporter=verbose",
     "check:contracts": "rtgl fe check",
     "copy:css": "node copy-css.js",
     "build:dev": "rtgl fe build -d && bun run esbuild-dev.js && npm run copy:css",
@@ -44,7 +46,9 @@
     "looks-same": "^9.0.1",
     "pixelmatch": "^6.0.0",
     "playwright": "1.57.0",
-    "pngjs": "^7.0.0"
+    "pngjs": "^7.0.0",
+    "puty": "^0.1.1",
+    "vitest": "^4.0.15"
   },
   "keywords": [
     "ui",
