feat(ui,docs): rename sidebar sm-* props, mobile docs navbar, VT coverage
- Rename sidebar props: sm-full-width -> full-width, sm-hide-header -> hide-header
- Update sidebar store to use sm-w=100% instead of sm-w=f for full-width
- Add mobile docs navbar with scroll-to-hide and sidebar overlay toggle
- Add menu/close SVG icons, CDN fallback with onerror on all templates
- Add local IIFE build for CDN fallback
- Update VT specs with improved wait strategies and new prop selectors
- Add mobile-interactions VT spec (overlay, scroll hide/show, escape)
- Regenerate all sidebar and docs VT reference screenshots

--- a/apps/rettangoli.dev/partials/docs-mobile-shell.yaml
+++ b/apps/rettangoli.dev/partials/docs-mobile-shell.yaml
@@ -6,4 +6,4 @@
 
 - 'div class="docs-mobile-sidebar-overlay" id="docs-mobile-sidebar-overlay" data-testid="docs-mobile-sidebar-overlay" hidden':
     - 'div class="docs-mobile-sidebar-panel"':
-        - rtgl-sidebar id="docs-mobile-sidebar-nav" data-testid="docs-mobile-sidebar-nav" selected-item-id=${sidebarId} header="%7B%7D" items="${encodeURIComponent(jsonStringify(items))}" sm-full-width="true" sm-hide-header="true" w=f:
+        - rtgl-sidebar id="docs-mobile-sidebar-nav" data-testid="docs-mobile-sidebar-nav" selected-item-id=${sidebarId} header="%7B%7D" items="${encodeURIComponent(jsonStringify(items))}" full-width="true" hide-header="true" w=f:
