--- a/apps/rettangoli.dev/templates/base.yaml
+++ b/apps/rettangoli.dev/templates/base.yaml
@@ -4,10 +4,10 @@
           page: ${page}
           seo: ${seo}
           title: ${title}
-        - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/themes/base.css":
-        - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/themes/theme-rtgl-slate.css":
+        - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/themes/base.css" onerror="this.onerror=null;this.href='/public/base.css'":
+        - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/themes/theme-rtgl-slate.css" onerror="this.onerror=null;this.href='/public/theme-rtgl-slate.css'":
         - script src="https://cdn.jsdelivr.net/npm/construct-style-sheets-polyfill@3.1.0/dist/adoptedStyleSheets.min.js":
-        - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/rettangoli-iife-ui.min.js":
+        - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/rettangoli-iife-ui.min.js" onerror="this.onerror=null;this.src='/public/rettangoli-iife-ui.min.js'":
         - script src="/public/rtgl-icons.js":
 
     - body.dark:
